--- a/index.html
+++ b/index.html
@@ -173,6 +173,17 @@
         <!-- 👆 CONTRIBUTORS: END COPYING HERE 👆 -->
 
         <div class="card">
+            <div class="card-inner">
+                <img src="images/tankan.png" alt="User Photo" class="card-img">
+                <h2>Chirag Tankan</h2>
+                <span class="role">Developer</span>
+                <p>"Professional Contributor"</p>
+                <a href="http://github.com/ChiragTankan/" class="card-btn" target="_blank">
+                    <i class="fas fa-external-link-alt"></i> View Profile
+                </a>
+            </div>
+        </div>
+        <div class="card">
             <img src="images/mohit-yadav.jpg" alt="Mohit Yadav's Photo" class="card-img">
             <h2>Mohit Yadav</h2>
             <span class="role">Frontend Wizard</span>
