--- a/index.html
+++ b/index.html
@@ -560,6 +560,17 @@
                 </a>
             </div>
         </div>
+        <div class="card">
+            <div class="card-inner">
+                <img src="images/user.png" alt="User Photo" class="card-img">
+                <h2>Armaan</h2>
+                <span class="role">Contributor</span>
+                <p>"CSE student passionate about exploring and contributing to Open Source projects."</p>
+                <a href="https://github.com/iarmaanx" class="card-btn" target="_blank">
+                    <i class="fas fa-external-link-alt"></i> View Github Profile
+                </a>
+            </div>
+        </div>
         <!-- ADD YOUR NEW CARD ABOVE THIS COMMENT -->
 
     </div> <!-- End of card-container -->
